--- a/optimization.html
+++ b/optimization.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2024-12-02" />
+<meta name="date" content="2024-12-06" />
 
 <title>Optimization Vignette</title>
 
@@ -350,7 +350,7 @@ display: none;
 
 
 <h1 class="title toc-ignore">Optimization Vignette</h1>
-<h4 class="date">2024-12-02</h4>
+<h4 class="date">2024-12-06</h4>
 
 </div>
 
@@ -411,7 +411,9 @@ head(expenses)</code></pre>
 p &lt;- ncol(expenses)</code></pre>
 <p>Since this dataset has character vectors, we need to convert these
 vectors to numeric using the function model.matrix. This function also
-creates a column of ones for the intercept.</p>
+creates a column of ones for the intercept.The functions that are in the
+package assume that the intercept column is already added, so the user
+needs to make sure this is true of their dataset.</p>
 <pre class="r"><code>expenses[] &lt;- lapply(expenses, function(x) if (is.character(x)) as.factor(x) else x)
 formula &lt;- ~ . # this specifies how to model the data, tells it to include all the columns
 design_matrix &lt;- model.matrix(formula, data = expenses)
@@ -440,23 +442,26 @@ named Final_Project_Group1 within the AU-R-Programming organization.</p>
 <pre class="r"><code>library(devtools)
 install_github(&quot;AU-R-Programming/Final_Project_Group1&quot;)</code></pre>
 <pre><code>## ── R CMD build ─────────────────────────────────────────────────────────────────
-##          checking for file &#39;C:\Users\sarah\AppData\Local\Temp\RtmpIFifVV\remotes546c7fde59fd\AU-R-Programming-Final_Project_Group1-1ca9429/DESCRIPTION&#39; ...     checking for file &#39;C:\Users\sarah\AppData\Local\Temp\RtmpIFifVV\remotes546c7fde59fd\AU-R-Programming-Final_Project_Group1-1ca9429/DESCRIPTION&#39; ...   ✔  checking for file &#39;C:\Users\sarah\AppData\Local\Temp\RtmpIFifVV\remotes546c7fde59fd\AU-R-Programming-Final_Project_Group1-1ca9429/DESCRIPTION&#39;
+##          checking for file &#39;C:\Users\sarah\AppData\Local\Temp\Rtmp4KZIfl\remotes31dc98034f7\AU-R-Programming-Final_Project_Group1-756c421/DESCRIPTION&#39; ...  ✔  checking for file &#39;C:\Users\sarah\AppData\Local\Temp\Rtmp4KZIfl\remotes31dc98034f7\AU-R-Programming-Final_Project_Group1-756c421/DESCRIPTION&#39;
 ##       ─  preparing &#39;Optimization&#39;:
 ##    checking DESCRIPTION meta-information ...  ✔  checking DESCRIPTION meta-information
 ##       ─  checking for LF line-endings in source and make files and shell scripts
 ##   ─  checking for empty or unneeded directories
 ##    Omitted &#39;LazyData&#39; from DESCRIPTION
-##   ─  building &#39;Optimization_0.1.0.tar.gz&#39;
+##       ─  building &#39;Optimization_0.1.1.tar.gz&#39;
 ##      
 ## </code></pre>
 </div>
 <div id="using-the-optimization-package" class="section level2">
 <h2>Using the Optimization package</h2>
-</div>
-<div id="opt_beta_est" class="section level2">
-<h2>opt_beta_est</h2>
-<p>The opt_beta_est function can be used to estimate the vector <span class="math inline">\(\beta\)</span> for our dataset. The response
-variable for this dataset is the <code>sex</code> column.</p>
+<p>There are three functions included in this package, and their
+descriptions and examples of how to use them are found below.</p>
+<div id="opt_beta_est" class="section level3">
+<h3>opt_beta_est</h3>
+<p>The opt_beta_est function can be used to estimate the vector <span class="math inline">\(\beta\)</span> for our dataset based on the loss
+function provided above through minimizing the function. The response
+variable for this dataset is the <code>sex</code> column, which is
+column 3.</p>
 <pre class="r"><code>library(Optimization)
 X &lt;- design_matrix[, -3]
 y &lt;- design_matrix[, 3]
@@ -472,54 +477,74 @@ dim(X)</code></pre>
 <pre class="r"><code>length(beta_opt_func)</code></pre>
 <pre><code>## [1] 9</code></pre>
 <p>This function returns the optimal estimated <span class="math inline">\(\beta\)</span> values for this dataset, where the
-response element is the sex of the patient. ADD WHAT THIS MEANS.</p>
+response element is the sex of the patient.</p>
+<p>The first element of <span class="math inline">\(\beta\)</span>
+corresponds to the intercept term, which represents the baseline
+log-odds of the outcome when all the predictors are zero. The other
+elements of <span class="math inline">\(\beta\)</span> are the weights
+of the predictors, where each coefficient measures the change in the
+log-odds of the outcome per unit increase in the corresponding
+predictor, assuming the other predictors are held constant. These
+coefficients provide a way to quantify the strength and direction of the
+relationship between each predictor and the log-odds of the outcome. For
+our example, BMI, children, and smoking are positive, indicating that as
+these predictors increase, the probability of a positive class increases
+as well. The opposite is true for the negative predictors.</p>
+<p>This optimized <span class="math inline">\(\beta\)</span> vector
+provides the intercept and coefficients for the logisitic regression
+model that makes the model’s predicted probabilities, <span class="math inline">\(p_i\)</span>, closest to the actual outcome, <span class="math inline">\(y_i\)</span>.</p>
 </div>
-<div id="bootstrap_ci" class="section level2">
-<h2>bootstrap_ci</h2>
+<div id="bootstrap_ci" class="section level3">
+<h3>bootstrap_ci</h3>
 <p>Another function within this optimization package is the
 <code>bootstrap_ci</code> function. This function uses the bootstrap
-method to create confidence intervals at the specified confidence level,
-<span class="math inline">\(\alpha\)</span>. The number of times the
-bootstrap procedure is repeated can be specified by the user, with the
-default being 20.</p>
-<pre class="r"><code>bootstrap_ci(X, y, beta_opt_func, alpha = 0.05,n_bootstrap = 20)</code></pre>
-<pre><code>## Estimated beta: 0.4645245 -0.001473234 0.00196664 0.0001403045 0.1528564 0.104377 0.04863357 0.04883606 -2.391674e-06 
-## Estimated beta: 0.5390163 0.00229981 -0.004616979 0.01382504 0.1171944 -0.02865164 -0.01840712 -0.00895304 -9.038442e-07 
-## Estimated beta: 0.3228616 -1.989669e-05 0.006360757 0.01805334 0.2030143 -0.01893717 0.004153538 -0.02826227 -2.758804e-06 
-## Estimated beta: 0.4760709 -0.001893354 0.005270263 -0.01682533 0.1309197 -0.01911599 0.01279471 -0.01564898 -3.120667e-05 
-## Estimated beta: 0.2219711 0.0003582589 0.007554591 0.01630824 0.07383553 -0.04364633 -0.02099761 0.03237324 1.116771e-06 
-## Estimated beta: 0.2817577 -0.0009871642 0.006766308 0.007853463 -0.01869731 0.04972368 0.02315513 -0.02121416 3.859279e-06 
-## Estimated beta: 0.4218262 3.47824e-05 0.001184998 0.006453159 0.09733461 0.04753993 0.008470969 -0.01333755 -2.360085e-05 
-## Estimated beta: 0.3709756 -0.000575167 0.004385894 0.02330725 0.05176927 -0.02638414 -0.01400892 0.008826004 1.072989e-06 
-## Estimated beta: 0.3358828 -0.0003274203 0.004976202 0.001560332 0.07752089 0.07060587 0.0328409 0.03671804 6.682796e-09 
-## Estimated beta: 0.3280305 -0.001131778 0.006192207 0.005681158 0.2097234 0.03519957 0.05153997 0.1111827 -4.375223e-06 
-## Estimated beta: 0.3696573 0.0004193558 0.002395688 0.007492769 0.169964 0.04713073 0.06967458 0.07853917 -2.147089e-06 
-## Estimated beta: 0.36867 -0.001438385 0.004563561 0.0211166 0.1409955 0.07884339 -0.0459715 -0.02567116 -1.766997e-05 
-## Estimated beta: 0.4248501 -0.001875854 0.003569669 0.02411926 0.1538824 -0.01681541 0.05546598 0.03172287 -1.092636e-05 
-## Estimated beta: 0.3864089 -0.00113619 0.00564372 0.009474993 0.1115057 -0.02197652 -0.04961033 -0.06571665 -7.590252e-07 
-## Estimated beta: 0.4102738 -0.001032026 0.00335732 0.01182758 0.08910491 -0.0406648 -0.01152008 -0.02600495 1.482161e-06 
-## Estimated beta: 0.3067817 0.0002093266 0.005715939 0.0131521 0.2027616 -0.01034071 0.03010084 0.05885989 -3.052836e-06 
-## Estimated beta: 0.3250097 -0.001060705 0.006831261 0.01224671 0.01782654 -0.03096623 -0.04762031 -0.02834135 1.575393e-06 
-## Estimated beta: 0.3787948 5.821358e-05 0.001885219 0.00627998 0.1263052 0.0703457 0.07598075 0.05298128 -4.107163e-07 
-## Estimated beta: 0.2962603 -9.246686e-05 0.007615 -0.003330487 0.1694357 0.02311335 -5.968794e-05 -0.04164477 -2.279334e-06 
-## Estimated beta: 0.3296614 -0.001823122 0.006711759 0.01037267 0.05467357 0.0383039 0.0225612 0.00856612 1.242533e-06</code></pre>
+method of resampling to create confidence intervals at the specified
+confidence level, <span class="math inline">\(\alpha\)</span>. The
+number of times the bootstrap procedure is repeated can be specified by
+the user, with the default being 20.</p>
+<pre class="r"><code>bootstrap_ci(X, y, beta_opt_func, alpha = 0.05, n_bootstrap = 20)</code></pre>
+<pre><code>## Estimated beta: 0.3834213 0.0002711123 0.002057317 0.02034625 0.08257865 -0.03177048 -0.009160648 -0.0153743 5.015495e-07 
+## Estimated beta: 0.369321 -0.0007090421 0.005102303 -0.006036125 0.1052489 0.019302 0.003530352 -0.004408902 -2.338738e-05 
+## Estimated beta: 0.4826988 -0.001097687 0.001277972 0.03137464 0.1119725 -0.04523716 -0.05113203 -0.0442762 7.522157e-07 
+## Estimated beta: 0.421641 -0.001438134 0.005290154 0.001879193 0.07490784 -0.0236379 -0.04419056 -0.01557246 -7.310337e-07 
+## Estimated beta: 0.4218267 -0.001502725 0.003686797 0.0159871 -0.05757016 -0.04418525 -0.04225651 -0.0158452 4.54667e-06 
+## Estimated beta: 0.253289 -0.0001927012 0.007116871 0.02022593 0.1445941 0.0360458 -0.01448352 0.02828508 -6.955572e-07 
+## Estimated beta: 0.6012412 -0.001222831 -0.001483786 -0.001963867 -0.01470637 -0.04214553 -0.02690426 -0.003201453 2.004784e-06 
+## Estimated beta: 0.4734917 0.0006329271 -0.0005544792 -0.008649117 0.05605566 -0.03041595 0.03346311 -0.04506781 1.59303e-06 
+## Estimated beta: 0.4746197 -0.001128714 0.001942434 0.01553194 0.1120383 0.01888388 0.05059503 -0.044775 -1.232204e-06 
+## Estimated beta: 0.4813564 -0.000727963 0.001822826 -0.007497759 0.06926704 -0.01672997 0.00759437 0.003911011 2.299774e-07 
+## Estimated beta: 0.2329129 4.587218e-06 0.008637953 0.01098751 0.1766779 -0.004666063 -0.0498888 -0.0174136 -1.755687e-05 
+## Estimated beta: 0.206979 -0.0008371882 0.00995029 0.001342215 0.1388907 -0.003852826 -0.03748884 -0.01094131 -6.134765e-07 
+## Estimated beta: 0.3912871 0.005517527 -0.002112806 -0.01483817 0.2348526 -0.03581577 -0.03710827 -0.07828762 -2.310929e-05 
+## Estimated beta: 0.4393272 -0.002102683 0.003413163 0.004847554 0.08119213 0.01126319 -0.006123658 0.02951589 -1.772038e-05 
+## Estimated beta: 0.3435504 -0.001102748 0.003721894 0.0240778 0.04788672 0.02364783 -0.01885249 -0.01059671 -2.005833e-05 
+## Estimated beta: 0.4784017 -0.001396507 0.002932587 0.002372206 0.172614 -0.05139901 0.01556187 0.03084091 -1.576327e-06 
+## Estimated beta: 0.4664579 -0.0004509497 0.0008157603 0.00476088 0.07634647 0.0007451943 0.01080881 0.0033609 3.742987e-07 
+## Estimated beta: 0.4042894 -0.0008836061 0.004314056 -0.0204969 0.08682131 0.007966463 -0.02824472 0.05547312 7.567115e-07 
+## Estimated beta: 0.413184 -0.001307537 0.004118559 0.02546434 0.1330397 -0.04227797 -0.01095578 -0.06459124 -1.121946e-06 
+## Estimated beta: 0.4836236 -0.002240365 0.00165159 0.01646211 0.07295197 0.01963452 -0.01191989 -0.02707377 1.640154e-06</code></pre>
 <pre><code>##   Coefficient      Lower_CI     Upper_CI
-## 1           1  2.503697e-01 5.091173e-01
-## 2           2 -1.885042e-03 1.406594e-03
-## 3           3 -1.861040e-03 7.586305e-03
-## 4           4 -1.041528e-02 2.373356e-02
-## 5           5 -1.348485e-03 2.065366e-01
-## 6           6 -4.223010e-02 9.224854e-02
-## 7           7 -4.866507e-02 7.298532e-02
-## 8           8 -5.428250e-02 9.567703e-02
-## 9           9 -2.759391e-05 2.774433e-06</code></pre>
-<p>GIVE EXPLANATION OF THIS.</p>
+## 1           1  2.192976e-01 5.453729e-01
+## 2           2 -2.174966e-03 3.197342e-03
+## 3           3 -1.814021e-03 9.326930e-03
+## 4           4 -1.780901e-02 2.856725e-02
+## 5           5 -3.720986e-02 2.072196e-01
+## 6           6 -4.847213e-02 3.015676e-02
+## 7           7 -5.054150e-02 4.245737e-02
+## 8           8 -7.178184e-02 4.377282e-02
+## 9           9 -2.325529e-05 3.339274e-06</code></pre>
+<p>The output of this function is the <span class="math inline">\(1 -
+\alpha\)</span> confidence intervals, giving the upper and lower limits
+for each element of the <span class="math inline">\(\beta\)</span>
+vector. For this example, <span class="math inline">\(\alpha =
+0.05\)</span>, so the output corresponds to the 95% confidence
+level.</p>
 </div>
-<div id="confusion_metrics" class="section level2">
-<h2>confusion_metrics</h2>
-<p>The last function that is included in this <code>optimization</code>
-function creates a confusion matrix. Based on a cut-off value for
-prediction at 0.5.</p>
+<div id="confusion_metrics" class="section level3">
+<h3>confusion_metrics</h3>
+<p>The last function that is included in this <code>Optimization</code>
+package creates a confusion matrix. It is based on a cut-off value for
+prediction, where the default is 0.5.</p>
 <pre class="r"><code># Predict probabilities and calculate metrics
 
 y_pred &lt;- 1 / (1 + exp(-X %*% beta_opt_func))  # use design matrix with intercept  
@@ -558,6 +583,7 @@ positives in the data), accuracy, sensitivity (true positive rate),
 specificity (true negative rate), false discovery rate (FDR), and
 diagnostic odds ratio (DOR). The function returns these metrics as a
 list for model evaluation.</p>
+</div>
 </div>
 <div id="references" class="section level2">
 <h2>References</h2>
