--- a/optimization.html
+++ b/optimization.html
@@ -441,16 +441,6 @@ head(design_matrix)</code></pre>
 named Final_Project_Group1 within the AU-R-Programming organization.</p>
 <pre class="r"><code>library(devtools)
 install_github(&quot;AU-R-Programming/Final_Project_Group1&quot;)</code></pre>
-<pre><code>## ── R CMD build ─────────────────────────────────────────────────────────────────
-##          checking for file &#39;C:\Users\sarah\AppData\Local\Temp\Rtmp4KZIfl\remotes31dc98034f7\AU-R-Programming-Final_Project_Group1-756c421/DESCRIPTION&#39; ...  ✔  checking for file &#39;C:\Users\sarah\AppData\Local\Temp\Rtmp4KZIfl\remotes31dc98034f7\AU-R-Programming-Final_Project_Group1-756c421/DESCRIPTION&#39;
-##       ─  preparing &#39;Optimization&#39;:
-##    checking DESCRIPTION meta-information ...  ✔  checking DESCRIPTION meta-information
-##       ─  checking for LF line-endings in source and make files and shell scripts
-##   ─  checking for empty or unneeded directories
-##    Omitted &#39;LazyData&#39; from DESCRIPTION
-##       ─  building &#39;Optimization_0.1.1.tar.gz&#39;
-##      
-## </code></pre>
 </div>
 <div id="using-the-optimization-package" class="section level2">
 <h2>Using the Optimization package</h2>
@@ -465,13 +455,12 @@ column 3.</p>
 <pre class="r"><code>library(Optimization)
 X &lt;- design_matrix[, -3]
 y &lt;- design_matrix[, 3]
-dim(X)</code></pre>
+dim(X) </code></pre>
 <pre><code>## [1] 1338    9</code></pre>
 <pre class="r"><code>length(y)</code></pre>
 <pre><code>## [1] 1338</code></pre>
-<pre class="r"><code>beta_opt_func &lt;- opt_beta_est(X, y)</code></pre>
-<pre><code>## Estimated beta: 0.383264 -0.00066372 0.004328928 0.007536227 0.1144097 -0.00626743 -0.005962597 -0.006005396 -8.91231e-07</code></pre>
-<pre class="r"><code>print(beta_opt_func)</code></pre>
+<pre class="r"><code>beta_opt_func &lt;- opt_beta_est(X, y)
+print(beta_opt_func)</code></pre>
 <pre><code>## [1]  3.832640e-01 -6.637200e-04  4.328928e-03  7.536227e-03  1.144097e-01
 ## [6] -6.267430e-03 -5.962597e-03 -6.005396e-03 -8.912310e-07</code></pre>
 <pre class="r"><code>length(beta_opt_func)</code></pre>
@@ -503,36 +492,16 @@ confidence level, <span class="math inline">\(\alpha\)</span>. The
 number of times the bootstrap procedure is repeated can be specified by
 the user, with the default being 20.</p>
 <pre class="r"><code>bootstrap_ci(X, y, beta_opt_func, alpha = 0.05, n_bootstrap = 20)</code></pre>
-<pre><code>## Estimated beta: 0.3834213 0.0002711123 0.002057317 0.02034625 0.08257865 -0.03177048 -0.009160648 -0.0153743 5.015495e-07 
-## Estimated beta: 0.369321 -0.0007090421 0.005102303 -0.006036125 0.1052489 0.019302 0.003530352 -0.004408902 -2.338738e-05 
-## Estimated beta: 0.4826988 -0.001097687 0.001277972 0.03137464 0.1119725 -0.04523716 -0.05113203 -0.0442762 7.522157e-07 
-## Estimated beta: 0.421641 -0.001438134 0.005290154 0.001879193 0.07490784 -0.0236379 -0.04419056 -0.01557246 -7.310337e-07 
-## Estimated beta: 0.4218267 -0.001502725 0.003686797 0.0159871 -0.05757016 -0.04418525 -0.04225651 -0.0158452 4.54667e-06 
-## Estimated beta: 0.253289 -0.0001927012 0.007116871 0.02022593 0.1445941 0.0360458 -0.01448352 0.02828508 -6.955572e-07 
-## Estimated beta: 0.6012412 -0.001222831 -0.001483786 -0.001963867 -0.01470637 -0.04214553 -0.02690426 -0.003201453 2.004784e-06 
-## Estimated beta: 0.4734917 0.0006329271 -0.0005544792 -0.008649117 0.05605566 -0.03041595 0.03346311 -0.04506781 1.59303e-06 
-## Estimated beta: 0.4746197 -0.001128714 0.001942434 0.01553194 0.1120383 0.01888388 0.05059503 -0.044775 -1.232204e-06 
-## Estimated beta: 0.4813564 -0.000727963 0.001822826 -0.007497759 0.06926704 -0.01672997 0.00759437 0.003911011 2.299774e-07 
-## Estimated beta: 0.2329129 4.587218e-06 0.008637953 0.01098751 0.1766779 -0.004666063 -0.0498888 -0.0174136 -1.755687e-05 
-## Estimated beta: 0.206979 -0.0008371882 0.00995029 0.001342215 0.1388907 -0.003852826 -0.03748884 -0.01094131 -6.134765e-07 
-## Estimated beta: 0.3912871 0.005517527 -0.002112806 -0.01483817 0.2348526 -0.03581577 -0.03710827 -0.07828762 -2.310929e-05 
-## Estimated beta: 0.4393272 -0.002102683 0.003413163 0.004847554 0.08119213 0.01126319 -0.006123658 0.02951589 -1.772038e-05 
-## Estimated beta: 0.3435504 -0.001102748 0.003721894 0.0240778 0.04788672 0.02364783 -0.01885249 -0.01059671 -2.005833e-05 
-## Estimated beta: 0.4784017 -0.001396507 0.002932587 0.002372206 0.172614 -0.05139901 0.01556187 0.03084091 -1.576327e-06 
-## Estimated beta: 0.4664579 -0.0004509497 0.0008157603 0.00476088 0.07634647 0.0007451943 0.01080881 0.0033609 3.742987e-07 
-## Estimated beta: 0.4042894 -0.0008836061 0.004314056 -0.0204969 0.08682131 0.007966463 -0.02824472 0.05547312 7.567115e-07 
-## Estimated beta: 0.413184 -0.001307537 0.004118559 0.02546434 0.1330397 -0.04227797 -0.01095578 -0.06459124 -1.121946e-06 
-## Estimated beta: 0.4836236 -0.002240365 0.00165159 0.01646211 0.07295197 0.01963452 -0.01191989 -0.02707377 1.640154e-06</code></pre>
 <pre><code>##   Coefficient      Lower_CI     Upper_CI
-## 1           1  2.192976e-01 5.453729e-01
-## 2           2 -2.174966e-03 3.197342e-03
-## 3           3 -1.814021e-03 9.326930e-03
-## 4           4 -1.780901e-02 2.856725e-02
-## 5           5 -3.720986e-02 2.072196e-01
-## 6           6 -4.847213e-02 3.015676e-02
-## 7           7 -5.054150e-02 4.245737e-02
-## 8           8 -7.178184e-02 4.377282e-02
-## 9           9 -2.325529e-05 3.339274e-06</code></pre>
+## 1           1  2.780063e-01 4.638169e-01
+## 2           2 -1.591676e-03 5.340934e-04
+## 3           3  2.117879e-03 7.410748e-03
+## 4           4 -8.384512e-03 2.597295e-02
+## 5           5  2.708525e-02 2.011824e-01
+## 6           6 -7.442428e-02 4.576589e-02
+## 7           7 -7.057282e-02 6.075019e-02
+## 8           8 -7.381627e-02 1.469217e-02
+## 9           9 -2.597336e-05 1.793865e-06</code></pre>
 <p>The output of this function is the <span class="math inline">\(1 -
 \alpha\)</span> confidence intervals, giving the upper and lower limits
 for each element of the <span class="math inline">\(\beta\)</span>
@@ -544,7 +513,7 @@ level.</p>
 <h3>confusion_metrics</h3>
 <p>The last function that is included in this <code>Optimization</code>
 package creates a confusion matrix. It is based on a cut-off value for
-prediction, where the default is 0.5.</p>
+prediction, which is 0.5.</p>
 <pre class="r"><code># Predict probabilities and calculate metrics
 
 y_pred &lt;- 1 / (1 + exp(-X %*% beta_opt_func))  # use design matrix with intercept  
@@ -583,6 +552,8 @@ positives in the data), accuracy, sensitivity (true positive rate),
 specificity (true negative rate), false discovery rate (FDR), and
 diagnostic odds ratio (DOR). The function returns these metrics as a
 list for model evaluation.</p>
+<p>The DOR being NA for this example is due to all of the value for
+y_pred being over 0.5, which is the given cut-off value.</p>
 </div>
 </div>
 <div id="references" class="section level2">
